@@ -598,10 +598,10 @@ void Sys_Sleep (unsigned long msecs)
 {
 	if (!msecs)
 		return;
-	else if (msecs > 1000)
+	if (msecs > 1000)
 		msecs = 1000;
 
-	dos_usleep (msecs * 1000);
+	usleep (msecs * 1000);
 }
 
 
